--- a/index.html
+++ b/index.html
@@ -134,9 +134,12 @@
 
   <!-- Sección de créditos / actualizaciones -->  
   <div id="creditsSection">  
-    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones y Créditos</h2>  
-    <p>Este es el contenido de tus actualizaciones y créditos. Puedes poner aquí la información que desees.</p>  
-  </div>  
+    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
+    <p>Creador de la pagina: EL MENDEZ</p>
+    </p>AYUDA: El Alfon.</p>
+    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones:</h2>
+    </p> - Se ha eliminado Subway Surfers por el puto iRiS.
+  </div> + Se ha añadido Tunnel Rush.
 
   <!-- Grid de juegos -->  
   <div class="grid" id="gameGrid">  
@@ -165,9 +168,9 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="1v1lol/">  
-        <img src="1v1lol/logo.png" alt="1v1.lol" />  
-        <div class="game-title">1v1.lol</div>  
+      <a href="Paperio">  
+        <img src="Paperio/paper.jpg" alt="Paper.io" />  
+        <div class="game-title">Paper.io</div>  
       </a>  
     </div>  
     <div class="game">  
