--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
     <p>Creador de la pagina: EL MENDEZ</p>
     </p>AYUDA: El Alfon.</p>
     <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones:</h2>
-    </p> - Se ha eliminado Subway Surfers por el puto iRiS.
-  </div> + Se ha añadido Tunnel Rush.
+    </p> - Se ha eliminado Subway Surfers por el puto iRiS.</p>
+    </p> + Se ha añadido Paper.io
+  </div>
 
   <!-- Grid de juegos -->  
   <div class="grid" id="gameGrid">  
