--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="Paperio">  
-        <img src="Paperio/paper.jpg" alt="Paper.io" />  
+      <a href="Paperio/index.html">  
+        <img src="Paperio/paper.jpeg" alt="Paper.io" />  
         <div class="game-title">Paper.io</div>  
       </a>  
     </div>  
