--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </p>AYUDA: El Alfon.</p>
     <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones:</h2>
     </p> - Se ha eliminado Subway Surfers por el puto iRiS.</p>
-    </p> + Se ha añadido Paper.io
+    </p> + Se ha añadido World Hardest Game
   </div>
 
   <!-- Grid de juegos -->  
@@ -169,9 +169,9 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="Paperio/index.html">  
-        <img src="Paperio/paper.jpeg" alt="Paper.io" />  
-        <div class="game-title">Paper.io</div>  
+      <a href="WorldHardestindex.html">  
+        <img src="WorldHardest/world.png" alt="Wolrd Hardest Game" />  
+        <div class="game-title">World Hardest Game</div>  
       </a>  
     </div>  
     <div class="game">  
