--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="WorldHardestindex.html">  
+      <a href="WorldHardest/index.html">  
         <img src="WorldHardest/world.png" alt="Wolrd Hardest Game" />  
         <div class="game-title">World Hardest Game</div>  
       </a>  
