--- a/index.html
+++ b/index.html
@@ -1,250 +1,145 @@
-<!DOCTYPE html>  
-<html lang="es">  
-<head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-  <title>CELEX - Juegos</title>  
-  <style>  
-    * {  
-      box-sizing: border-box;  
-    }  
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Endless Tunnel Unblocked - ubg235 GC</title>
+    <link rel="shortcut icon" href="TemplateData/img/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/css/style.css">
+    <script src="Build/UnityLoader.js"></script>
+	<script>
+		function ToggleFullScreen() {
+			var isInFullScreen = (document.fullscreenElement && document.fullscreenElement !== null) ||
+			(document.webkitFullscreenElement && document.webkitFullscreenElement !== null) ||
+			(document.mozFullScreenElement && document.mozFullScreenElement !== null) ||
+			(document.msFullscreenElement && document.msFullscreenElement !== null);
 
-    body {  
-      margin: 0;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      background: radial-gradient(#000000, #0f0f0f);  
-      color: white;  
-      background-image: url("game.jpg");  
-      background-size: cover;  
-      background-attachment: fixed;  
-      background-repeat: no-repeat;  
-      position: relative;  
-      z-index: 0;  
-    }  
+			var element = document.body.getElementsByClassName("webgl-content")[0];
 
-    body::before {  
-      content: "";  
-      position: fixed;  
-      inset: 0;  
-      background-size: cover;  
-      background-position: center;  
-      background-repeat: no-repeat;  
-      filter: brightness(0.3) blur(1px);  
-      z-index: -1;  
-    }  
+			if (!isInFullScreen) {
+				document.getElementById("fullScreenButton").style.backgroundImage="url('TemplateData/img/fullScreen_off.png')";
+				return (element.requestFullscreen ||
+				element.webkitRequestFullscreen ||
+				element.mozRequestFullScreen ||
+				element.msRequestFullscreen).call(element);
+			}
+			else {
+				document.getElementById("fullScreenButton").style.backgroundImage="url('TemplateData/img/fullScreen_on.png')";
+				if (document.exitFullscreen) {
+					document.exitFullscreen();
+				} else if (document.webkitExitFullscreen) {
+					document.webkitExitFullscreen();
+				} else if (document.mozCancelFullScreen) {
+					document.mozCancelFullScreen();
+				} else if (document.msExitFullscreen) {
+					document.msExitFullscreen();
+				}
+			}
+		}
 
-    h1 {  
-      text-align: center;  
-      margin: 30px 0 10px 0;  
-      font-size: 3em;  
-      color: white;  
-      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
-    }  
+		function CheckCompatibility(gameInstance, onsuccess, onerror)
+		{
+			if (!UnityLoader.SystemInfo.hasWebGL) {
+				document.getElementById("errorBrowserBlock").style.display = "inherit";
+				onerror();
+			} else if (UnityLoader.SystemInfo.mobile) {
+				document.getElementById("warningMobileBlock").style.display = "inherit";
+				onsuccess();
+			} else if (["Firefox", "Chrome", "Safari"].indexOf(UnityLoader.SystemInfo.browser) == -1) {
+				document.getElementById("warningBrowserBlock").style.display = "inherit";
+				onsuccess();
+			} else {
+				onsuccess();
+			}
+		}
 
-    /* Estilo para el cuadro clickkeable */  
-    #toggleButton {  
-      width: 250px;  
-      height: 50px;  
-      margin: 20px auto;  
-      background: rgba(255,255,255,0.1);  
-      border-radius: 10px;  
-      box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
-      display: flex;  
-      align-items: center;  
-      justify-content: center;  
-      cursor: pointer;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      font-weight: bold;  
-      font-size: 1.2em;  
-      color: #fff;  
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-      transition: all 0.3s ease;  
-    }  
+		function RuntimeInitialized(){
+		}
 
-    /* Sección de créditos / actualizaciones */  
-    #creditsSection {  
-      display: none;  
-      text-align: center;  
-      padding: 20px;  
-      max-width: 800px;  
-      margin: auto;  
-      border-radius: 10px;  
-      background: rgba(255,255,255,0.05);  
-      box-shadow: 0 0 20px #ffffff inset;  
-      color: #fff;  
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      font-size: 1.2em;  
-    }  
+		function UnityProgress(gameInstance, progress) {
+			if (!gameInstance.Module)
+			return;
+			document.getElementById("loadingBlock").style.display = "inherit";
+			document.getElementById("fullBar").style.width = (100 * progress) + "%";
+			document.getElementById("emptyBar").style.width = (100 * (1 - progress)) + "%";
+			if (progress == 1)
+			{
+				setTimeout(function(){ document.getElementById("loadingBlock").style.display = "none"; }, 3000);
+			}
+		}
 
-    /* Estilo para el grid de juegos */  
-    .grid {  
-      display: grid;  
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  
-      gap: 25px;  
-      padding: 20px;  
-      max-width: 1200px;  
-      margin: auto;  
-    }  
+		var gameInstance = UnityLoader.instantiate("gameContainer", "Build/EndlessTunnelGD.json", {
+			onProgress: UnityProgress,
+			compatibilityCheck:CheckCompatibility,
+			Module: {
+				//TOTAL_MEMORY: 268435456,
+				onRuntimeInitialized:RuntimeInitialized,
+			},
+		});
+    </script>
+  </head>
+  <body style="overflow:hidden;">
 
-    .game {  
-      background: rgba(255, 255, 255, 0.05);  
-      border-radius: 15px;  
-      overflow: hidden;  
-      text-align: center;  
-      box-shadow: 0 0 15px #00fff255;  
-      transition: transform 0.2s, box-shadow 0.2s;  
-    }  
+    <div class="keepRatio">
 
-    .game:hover {  
-      transform: scale(1.05);  
-      box-shadow: 0 0 25px #00fff2aa;  
-    }  
+		<div class="webgl-content">
+			<button id="fullScreenButton" onclick="ToggleFullScreen()"></button>
+			<div id="gameContainer"></div>
+		</div>
 
-    .game img {  
-      width: 100%;  
-      height: 150px;  
-      object-fit: cover;  
-      border-bottom: 2px solid #00fff2;  
-    }  
 
-    .game-title {  
-      font-size: 1.2em;  
-      padding: 12px;  
-      color: white;  
-      text-shadow: 0 0 5px #00fff2;  
-    }  
+		<div id="loadingBlock">
+			<img class="logo" src="TemplateData/img/Logo.png"></img>
+			<span class="subtitle"> Endless Tunnel <br>
 
-    a {  
-      color: white;  
-      text-decoration: none;  
-    }  
+			</span>
 
-    a:hover {  
-      text-decoration: underline;  
-    }  
-  </style>  
-</head>  
-<body>  
+			<div id="progressBar">
+				<div>LOADING ...</div>
+				<div class="centered">
+					<div id="emptyBar"></div>
+					<div id="fullBar"></div>
+				</div>
+			</div>
 
-  <h1>GK4 - Juegos</h1>  
+			<div id="warningBrowserBlock" style="display:none;">
+				<div class="warningBrowserText">
+					Your browser may not be compatible with this website. For an optimal experience, we suggest you to download one of this popular web browsers.
+				</div>
+				<div class="browserIcons">
+					<a href="https://www.mozilla.org/firefox" target="_blank"><img src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
+					<a href="https://www.google.com/chrome" target="_blank"><img src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
+					<a href="https://www.apple.com/safari/" target="_blank"><img src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
+				</div>
+			</div>
+			<div id="warningMobileBlock" style="display:none;">
+				<div class="warningBrowserText">
+					Please note that Unity WebGL is not currently supported on mobiles.
+				</div>
+			</div>
 
-  <!-- Cuadro clickeable debajo del título -->  
-  <div id="toggleButton">Ver Actualizaciones y Créditos</div>  
+		</div>
 
-  <!-- Sección de créditos / actualizaciones -->  
-  <div id="creditsSection">  
-    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
-    <p>Creador de la pagina: EL MENDEZ</p>
-    </p>AYUDA: El Alfon.</p>
-    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones:</h2>
-    </p> - Se ha eliminado Subway Surfers por el puto iRiS.</p>
-    </p> + Se ha añadido World Hardest Game
-  </div>
+		<div id="errorBrowserBlock" style="display:none;">
+			<img class="logo" src="TemplateData/img/Logo.png"></img>
+			<span class="subtitle"> CATCHPHRASE <br>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			</span>
 
-  <!-- Grid de juegos -->  
-  <div class="grid" id="gameGrid">  
-    <div class="game">  
-      <a href="Slope-Source-code-main/index.html">  
-        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />  
-        <div class="game-title">Slope</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="Subway-Surfers/index.html">  
-        <img src="R.png" alt="Subway Surfers" />  
-        <div class="game-title">Subway Surfers</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="BurritoBison-main/index.html">  
-        <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison" />  
-        <div class="game-title">Burrito Bison</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="drive-mad-main/index.html">  
-        <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad" />  
-        <div class="game-title">Drive Mad</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="WorldHardest/index.html">  
-        <img src="WorldHardest/world.png" alt="Wolrd Hardest Game" />  
-        <div class="game-title">World Hardest Game</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="bitlife/index.html">  
-        <img src="bitlife/logo.png" alt="Bitlife" />  
-        <div class="game-title">Bitlife</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="driftboss/index.html">  
-        <img src="driftboss/branding/logo1.png" alt="Drift Boss" />  
-        <div class="game-title">Drift Boss</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="happywheels/index.html">  
-        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels" />  
-        <div class="game-title">Happy Wheels</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="pacman/index.html">  
-        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman" />  
-        <div class="game-title">Pacman</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="skibidi1v100/index.html">  
-        <img src="skibidi1v100/logo.png" alt="Skibidi 1v100" />  
-        <div class="game-title">Skibidi 1v100</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="snowrider3d/index.html">  
-        <img src="snowrider3d/snow.png" alt="Snow Rider 3D" />  
-        <div class="game-title">Snow Rider 3D</div>  
-      </a>  
-    </div>  
-    <div class="game">  
-      <a href="volleyrandom/index.html">  
-        <img src="volleyrandom/splash.png" alt="Volley Random" />  
-        <div class="game-title">Volley Random</div>  
-      </a>  
-    </div>  
-  </div>  
+			<div id="errorContent">
+				<div id="errorBrowserText">
+					Your browser does not support WebGL. <br> You can download one of this popular web browsers.
+				</div>
+				<div class="browserIcons">
+					<a href="https://www.mozilla.org/firefox" target="_blank"><img src="TemplateData/img/browser-firefox.png" alt="Firefox browser"></a>
+					<a href="https://www.google.com/chrome" target="_blank"><img src="TemplateData/img/browser-chrome.png" alt="Chrome browser"></a>
+					<a href="https://www.apple.com/safari/" target="_blank"><img src="TemplateData/img/browser-safari.png" alt="Safari browser"></a>
+				</div>
+			</div>
+		</div>
 
-  <script>  
-    const toggleBtn = document.getElementById("toggleButton");  
-    const creditsSection = document.getElementById("creditsSection");  
-    const gameGrid = document.getElementById("gameGrid");  
-
-    toggleBtn.onclick = () => {  
-      if (creditsSection.style.display === "none") {  
-        // Mostrar créditos, ocultar juegos  
-        creditsSection.style.display = "block";  
-        gameGrid.style.display = "none";  
-        toggleBtn.innerHTML = "Volver a los Juegos";  
-      } else {  
-        // Mostrar juegos, ocultar créditos  
-        creditsSection.style.display = "none";  
-        gameGrid.style.display = "grid";  
-        toggleBtn.innerHTML = "Ver Actualizaciones y Créditos";  
-      }  
-    };  
-
-    function searchGames() {  
-      const input = document.getElementById("searchInput").value.toLowerCase();  
-      const games = document.querySelectorAll(".game");  
-      games.forEach(game => {  
-        const title = game.querySelector(".game-title").textContent.toLowerCase();  
-        game.style.display = title.includes(input) ? "block" : "none";  
-      });  
-    }  
-  </script>  
-</body>  
+	</div>
+    <script src="js/analytics_ubg_v1_4.js"></script>
+    <script src="js/ubg235_client_v1_1.js"></script>
+  </body>
 </html>
