--- a/index.html
+++ b/index.html
@@ -134,9 +134,13 @@
 
   <!-- Sección de créditos / actualizaciones -->  
   <div id="creditsSection">  
-    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Actualizaciones y Créditos</h2>  
-    <p>Este es el contenido de tus actualizaciones y créditos. Puedes poner aquí la información que desees.</p>  
-  </div>  
+    <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
+    <p>El creador: El mendez</p>
+    </p>El Ideas: El alfon</p>
+    </p>Actualizaciones:</p>
+    </p>Se ha eliminado 1v1.lol por el puto iRiS</p> 
+    </p>Se ha añadido Tunnel Rush</p>
+  </div>
 
   <!-- Grid de juegos -->  
   <div class="grid" id="gameGrid">  
@@ -165,9 +169,9 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="1v1lol/">  
-        <img src="1v1lol/logo.png" alt="1v1.lol" />  
-        <div class="game-title">1v1.lol</div>  
+      <a href="Tunnel-Rush/index.html">  
+        <img src="Tunnel-Rush/favicon.ico" alt="Tunnel Rush" />  
+        <div class="game-title">Tunnel Rush</div>  
       </a>  
     </div>  
     <div class="game">  
