--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>  
 <body>  
 
-  <h1>GK4 - Juegos</h1>  
+  <h1>CELEX - Juegos</h1>  
 
   <!-- Cuadro clickeable debajo del título -->  
   <div id="toggleButton">Ver Actualizaciones y Créditos</div>  
