--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>  
     <div class="game">  
       <a href="Tunnel-Rush/index.html">  
-        <img src="Tunnel-Rush/favicon.ico" alt="Tunnel Rush" />  
+        <img src="" alt="Tunnel Rush" />  
         <div class="game-title">Tunnel Rush</div>  
       </a>  
     </div>  
