--- a/index.html
+++ b/index.html
@@ -1,91 +1,154 @@
 <!DOCTYPE html>  
 <html lang="es">  
 <head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-  <title>CELEX - Juegos</title>  
-  <style>  
-    * {  
-      box-sizing: border-box;  
-    }  
+<meta charset="UTF-8" />  
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
+<title>CELEX - Juegos</title>  
+<style>  
+  * {  
+    box-sizing: border-box;  
+  }  
 
-    body {  
-      margin: 0;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      background: radial-gradient(#000000, #0f0f0f);  
-      color: white;  
-      background-image: url("game.jpg");  
-      background-size: cover;  
-      background-attachment: fixed;  
-      background-repeat: no-repeat;  
-      position: relative;  
-      z-index: 0;  
-    }  
+  body {  
+    margin: 0;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    /* Elimina el fondo negro/oscuro, usa solo la imagen de fondo */  
+    background-image: url("game.jpg");  
+    background-size: cover;  
+    background-attachment: fixed;  
+    background-repeat: no-repeat;  
+    background-position: center;  
+    color: #fff; /* Texto en blanco */  
+  }  
 
-    body::before {  
-      content: "";  
-      position: fixed;  
-      inset: 0;  
-      background-size: cover;  
-      background-position: center;  
-      background-repeat: no-repeat;  
-      filter: brightness(0.3) blur(1px);  
-      z-index: -1;  
-    }  
+  /* El pseudo-elemento para colocar un filtro suave sobre la imagen, opcional */  
+  body::before {  
+    content: "";  
+    position: fixed;  
+    inset: 0;  
+    background: rgba(0, 0, 0, 0.3); /* un filtro oscuro suave para mejorar lectura */  
+    /* Puedes ajustar el RGBA para más o menos opacidad */  
+    z-index: -1;  
+  }  
 
-    h1 {  
-      text-align: center;  
-      margin: 30px 0 10px 0;  
-      font-size: 3em;  
-      color: white;  
-      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
-    }  
+  h1 {  
+    text-align: center;  
+    margin: 30px 0 10px 0;  
+    font-size: 3em;  
+    color: white;  
+    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
+  }  
 
-    /* Estilo para el cuadro clickkeable */  
-    #toggleButton {  
-      width: 250px;  
-      height: 50px;  
-      margin: 20px auto;  
-      background: rgba(255,255,255,0.1);  
-      border-radius: 10px;  
-      box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
-      display: flex;  
-      align-items: center;  
-      justify-content: center;  
-      cursor: pointer;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      font-weight: bold;  
-      font-size: 1.2em;  
-      color: #fff;  
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-      transition: all 0.3s ease;  
-    }  
+  /* Estilo para el cuadro clickeable */  
+  #toggleButton {  
+    width: 250px;  
+    height: 50px;  
+    margin: 20px auto;  
+    background: rgba(255,255,255,0.1);  
+    border-radius: 10px;  
+    box-shadow: 0 0 20px #ffffff, 0 0 40px #ffffff inset;  
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
+    cursor: pointer;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-weight: bold;  
+    font-size: 1.2em;  
+    color: #fff;  
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
+    transition: all 0.3s ease;  
+  }  
 
-    /* Sección de créditos / actualizaciones */  
-    #creditsSection {  
-      display: none;  
-      text-align: center;  
-      padding: 20px;  
-      max-width: 800px;  
-      margin: auto;  
-      border-radius: 10px;  
-      background: rgba(255,255,255,0.05);  
-      box-shadow: 0 0 20px #ffffff inset;  
-      color: #fff;  
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      font-size: 1.2em;  
-    }  
+  /* Sección de créditos / actualizaciones */  
+  #creditsSection {  
+    display: none;  
+    text-align: center;  
+    padding: 20px;  
+    max-width: 800px;  
+    margin: auto;  
+    border-radius: 10px;  
+    background: rgba(255,255,255,0.05);  
+    box-shadow: 0 0 20px #ffffff inset;  
+    color: #fff;  
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-size: 1.2em;  
+  }  
 
-    /* Estilo para el grid de juegos */  
-    .grid {  
+  /* Estilo para el grid de juegos */  
+  .grid {  
+    display: grid;  
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  
+    gap: 25px;  
+    padding: 20px;  
+    max-width: 1200px;  
+    margin: auto;  
+  }  
+
+  .game {  
+    background: rgba(255, 255, 255, 0.05);  
+    border-radius: 15px;  
+    overflow: hidden;  
+    text-align: center;  
+    box-shadow: 0 0 15px #00fff255;  
+    transition: transform 0.2s, box-shadow 0.2s;  
+  }  
+
+  .game:hover {  
+    transform: scale(1.05);  
+    box-shadow: 0 0 25px #00fff2aa;  
+  }  
+
+  .game img {  
+    width: 100%;  
+    height: 150px;  
+    object-fit: cover;  
+    border-bottom: 2px solid #00fff2;  
+  }  
+
+  .game-title {  
+    font-size: 1.2em;  
+    padding: 12px;  
+    color: white;  
+    text-shadow: 0 0 5px #00fff2;  
+  }  
+
+  a {  
+    color: white;  
+    text-decoration: none;  
+  }  
+
+  a:hover {  
+    text-decoration: underline;  
+  }  
+</style>  
+</head>  
+<body>  
+
+<h1>CELEX - Juegos</h1>  
+
+<!-- Cuadro clickeable debajo del título -->  
+<div id="toggleButton">Ver Actualizaciones y Créditos</div>  
+
+<!-- Sección de créditos / actualizaciones -->  
+<div id="creditsSection">  
+  <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
+  <p>El creador: El mendez</p>  
+  <p>El Ideas: El alfon</p>  
+  <p>Actualizaciones:</p>  
+  <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
+  <p>Se ha añadido Tunnel Rush</p>  
+</div>   
+
+/* Estilo para el grid de juegos */  
+  .grid {  
       display: grid;  
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  
       gap: 25px;  
       padding: 20px;  
       max-width: 1200px;  
       margin: auto;  
-    }  
+  }  
 
     .game {  
       background: rgba(255, 255, 255, 0.05);  
