--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   }  
 
   body {  
-    margin: 0;  
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-    /* Elimina el fondo negro/oscuro, usa solo la imagen de fondo */  
-    background-image: url("game.jpg");  
-    background-size: cover;  
-    background-attachment: fixed;  
-    background-repeat: no-repeat;  
-    background-position: center;  
-    color: #fff; /* Texto en blanco */  
-  }  
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: radial-gradient(#000000, #0f0f0f);
+      color: white;
+      background-image: url("game.jpg");
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      position: relative;
+      z-index: 0;
+    }
 
   /* El pseudo-elemento para colocar un filtro suave sobre la imagen, opcional */  
   body::before {
