--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 </style>  
 </head>  
 <body>   
+ <h1>GK4 - Juegos</h1>
 
 <!-- Cuadro clickeable debajo del título -->  
 <div id="toggleButton">Ver Actualizaciones y Créditos</div>  
