--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
       </a>  
     </div>  
     <div class="game">  
+      <a href="Tunnel-Rush/index.html">  
+        <img src="Tunnel-Rush/favicon.ico" alt="Tunnel Rush " />  
+        <div class="game-title">Tunnel Rush</div>  
+      </a>  
+    <div class="game">  
       <a href="drive-mad-main/index.html">  
         <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad" />  
         <div class="game-title">Drive Mad</div>  
