--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
       </a>  
     </div>  
     <div class="game">  
-      <a href="Subway-Surfers/index.html">  
-        <img src="R.png" alt="Subway Surfers" />  
-        <div class="game-title">Subway Surfers</div>  
+      <a href="DriftHunters/index.html">  
+        <img src="drift.jpeg" alt="Drifter Hunters" />  
+        <div class="game-title">Drifter Hunters</div>  
       </a>  
     </div>  
     <div class="game">  
