--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </div>  
   <div class="game">  
     <a href="DriftHunters/index.html">  
-      <img src="drift.jpeg" alt="Drifter Hunters" />  
+      <img src="DriftHunters/drift.jpeg" alt="Drifter Hunters" />  
       <div class="game-title">Drifter Hunters</div>  
     </a>  
   </div>  
