--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
   <p>El Ideas: El alfon</p>  
   <p>Actualizaciones:</p>  
   <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
-  <p>Se ha añadido Tunnel Rush</p>  
+  <p>Se ha Borrado Tunnel Rush</p> 
+  <p>Se ha añadido Stickman Hook</p>
 </div>  
 
 <!-- Grid de juegos -->  
@@ -165,9 +166,9 @@
     </a>  
   </div>  
   <div class="game">  
-    <a href="Tunnel-Rush/index.html">  
-      <img src="Tunnel-Rush/favicon.ico" alt="Tunnel Rush" />  
-      <div class="game-title">Tunnel Rush</div>  
+    <a href="Stickman/index.html">  
+      <img src="Stickman/sick.webp" alt="Stickman hook" />  
+      <div class="game-title">Stickman Hook</div>  
     </a>  
   </div>  
   <div class="game">  
