--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     </a>  
   </div>  
   <div class="game">  
-    <a href="Stickman/index.html">  
-      <img src="Stickman/sick.webp" alt="Stickman hook" />  
-      <div class="game-title">Stickman Hook</div>  
+    <a href="Vex7/index.html">  
+      <img src="Vex7/assets/icon.png" alt="Vex 7" />  
+      <div class="game-title">Vex 7</div>  
     </a>  
   </div>  
   <div class="game">  
