--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
   <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
   <p>Se ha Borrado Tunnel Rush</p> 
   <p>Se ha añadido Stickman Hook</p>
+ <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>
 </div>  
 
 <!-- Grid de juegos -->  
@@ -166,9 +167,9 @@
     </a>  
   </div>  
   <div class="game">  
-    <a href="Vex7/index.html">  
-      <img src="Vex7/assets/icon.png" alt="Vex 7" />  
-      <div class="game-title">Vex 7</div>  
+    <a href="csgo/index.html">  
+      <img src="csgo/download.jpg" alt="CS:GO" />  
+      <div class="game-title">CS:GO</div>  
     </a>  
   </div>  
   <div class="game">  
