--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
   <p>Se ha Borrado Tunnel Rush</p> 
   <p>Se ha añadido Stickman Hook</p>
  <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>
+ <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>
 </div>  
 
 <!-- Grid de juegos -->  
@@ -155,9 +156,9 @@
     </a>  
   </div>  
   <div class="game">  
-    <a href="DriftHunters/index.html">  
-      <img src="DriftHunters/drift.jpeg" alt="Drifter Hunters" />  
-      <div class="game-title">Drifter Hunters</div>  
+    <a href="backrooms/index.html">  
+      <img src="backrooms/img/icon.jpg" alt="Backrooms" />  
+      <div class="game-title">Backrooms</div>  
     </a>  
   </div>  
   <div class="game">  
