--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </div>  
   <div class="game">  
     <a href="backrooms/index.html">  
-      <img src="backrooms/img/icon.jpg" alt="Backrooms" />  
+      <img src="backrooms/img/icon.png" alt="Backrooms" />  
       <div class="game-title">Backrooms</div>  
     </a>  
   </div>  
