--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <p>Actualizaciones:</p>  
   <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
   <p>Se ha Borrado Tunnel Rush</p> 
-  <p>Se ha añadido Stickman Hook</p>
+  <p>e añadido World Hardest Game quien se lo pase todo un 1 euro, VIVA VOX SANCHEZ MUERTO</p>
  <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>
  <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>
 </div>  
@@ -179,6 +179,12 @@
       <div class="game-title">Drive Mad</div>  
     </a>  
   </div>  
+ <div class="game">  
+    <a href="WorldHardest/index.html">  
+      <img src="WorldHardest/world.png" alt="World Hardest Game" />  
+      <div class="game-title">World Hardest Game</div>  
+    </a>  
+   </div> 
   <div class="game">  
     <a href="bitlife/index.html">  
       <img src="bitlife/logo.png" alt="Bitlife" />  
