--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
   <p>e añadido World Hardest Game quien se lo pase todo un 1 euro, VIVA VOX SANCHEZ MUERTO</p>
  <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>
  <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>
+ <p>illo otro mas el mierda este Doge Miner es la ostia probarlo es un tycoon los muertos de pedro sanchez.</p>
 </div>  
 
 <!-- Grid de juegos -->  
@@ -214,6 +215,12 @@
       <img src="skibidi1v100/logo.png" alt="Skibidi 1v100" />  
       <div class="game-title">Skibidi 1v100</div>  
     </a>  
+    </div>  
+  <div class="game">  
+    <a href="DogeMiner/index.html">  
+      <img src="DogeMiner/favicon.ico" alt="Doge Miner Tycoon" />  
+      <div class="game-title">Doge Miner Tycoon</div>  
+    </a> 
   </div>  
   <div class="game">  
     <a href="snowrider3d/index.html">  
