--- a/index.html
+++ b/index.html
@@ -8,29 +8,76 @@
   * {  
     box-sizing: border-box;  
   }  
-
+  
   body {  
-      margin: 0;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      background: radial-gradient(#000000, #0f0f0f);  
-      color: white;  
-      background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
-      background-size: cover;  
-      background-attachment: fixed;  
-      background-repeat: no-repeat;  
-      position: relative;  
-      z-index: 0;  
-    }  
+    margin: 0;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    background: radial-gradient(#000000, #0f0f0f);  
+    color: white;  
+    background-image: url("super-moon-full-moon-stars-cosmos-clouds-5k-8k-3840x2160-6182.jpg");  
+    background-size: cover;  
+    background-attachment: fixed;  
+    background-repeat: no-repeat;  
+    position: relative;  
+    z-index: 0;  
+  }  
 
   body::before {  
-      content: "";  
-      position: fixed;  
-      inset: 0;  
-      background-size: cover;  
-      background-position: center;  
-      background-repeat: no-repeat;  
-      filter: brightness(0.3) blur(1px);  
-      z-index: -1;  
+    content: "";  
+    position: fixed;  
+    inset: 0;  
+    background-size: cover;  
+    background-position: center;  
+    background-repeat: no-repeat;  
+    filter: brightness(0.3) blur(1px);  
+    z-index: -1;  
+  }  
+
+  /* Panel de login */  
+  #loginPanel {  
+    position: fixed;  
+    top: 0; left: 0; right: 0; bottom: 0;  
+    background: rgba(0,0,0,0.7);  
+    display: flex;  
+    justify-content: center;  
+    align-items: center;  
+    z-index: 9999;  
+  }  
+
+  #loginBox {  
+    background: #222;  
+    padding: 30px;  
+    border-radius: 10px;  
+    box-shadow: 0 0 20px #000;  
+    text-align: center;  
+  }  
+
+  #loginBox h2 {  
+    margin-bottom: 15px;  
+  }  
+
+  #loginBox input {  
+    width: 200px;  
+    padding: 10px;  
+    margin: 8px 0;  
+    border-radius: 5px;  
+    border: none;  
+    outline: none;  
+  }  
+
+  #loginBox button {  
+    width: 220px;  
+    padding: 10px;  
+    margin-top: 10px;  
+    background: #00f2f2;  
+    border: none;  
+    border-radius: 5px;  
+    cursor: pointer;  
+    font-weight: bold;  
+  }  
+
+  #loginBox button:hover {  
+    background: #00cccc;  
   }  
 
   h1 {  
@@ -91,7 +138,6 @@
     text-align: center;  
     box-shadow: 0 0 15px #00fff255;  
     transition: transform 0.2s, box-shadow 0.2s;  
-    /* Tamaño más rectangular */  
     height: 180px;  
     display: flex;  
     flex-direction: column;  
@@ -108,7 +154,7 @@
     height: 120px;  
     object-fit: cover;  
     border-bottom: 2px solid #00fff2;  
-    margin: 0 auto; /* Centrar la imagen */  
+    margin: 0 auto;  
   }  
 
   .game-title {  
@@ -129,27 +175,42 @@
 </style>  
 </head>  
 <body>  
+
 <h1>CELEX - Juegos</h1>  
 
-<!-- Cuadro clickeable debajo del título -->  
-<div id="toggleButton">Ver Actualizaciones y Créditos</div>  
+<!-- Panel de login -->  
+<div id="loginPanel">  
+  <div id="loginBox">  
+    <h2>Iniciar Sesión</h2>  
+    <input type="text" id="username" placeholder="Usuario" />  
+    <br/>  
+    <input type="password" id="password" placeholder="Contraseña" />  
+    <br/>  
+    <button id="loginBtn">Entrar</button>  
+    <p id="loginError" style="color: red; margin-top:10px; display:none;">Credenciales incorrectas</p>  
+  </div>  
+</div>  
 
-<!-- Sección de créditos / actualizaciones -->  
+<!-- Cuadro clickeable debajo del título (oculto hasta login) -->  
+<div id="toggleButton" style="display:none;">Ver Actualizaciones y Créditos</div>  
+
+<!-- Sección de créditos / actualizaciones (oculto hasta login) -->  
 <div id="creditsSection">  
   <h2 style="text-shadow: 0 0 10px #fff, 0 0 20px #fff;">Créditos</h2>  
   <p>El creador: El mendez</p>  
   <p>El Ideas: El alfon</p>  
   <p>Actualizaciones:</p>  
   <p>Se ha eliminado 1v1.lol por el puto iRiS</p>  
-  <p>Se ha Borrado Tunnel Rush</p> 
-  <p>e añadido World Hardest Game quien se lo pase todo un 1 euro, VIVA VOX SANCHEZ MUERTO</p>
- <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>
- <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>
- <p>illo otro mas el mierda este Doge Miner es la ostia probarlo es un tycoon los muertos de pedro sanchez.</p>
+  <p>Se ha Borrado Tunnel Rush</p>  
+  <p>e añadido World Hardest Game quien se lo pase todo un 1 euro, VIVA VOX SANCHEZ MUERTO</p>  
+  <p>E añadido CSGO y que?? iRiS DIMISON vIVA VOX</p>  
+  <p>a ve tambien los backrooms rojo muerto abono pa mi huerto VIVA VOX</p>  
+  <p>illo otro mas el mierda este Doge Miner es la ostia probarlo es un tycoon los muertos de pedro sanchez.</p>  
 </div>  
 
-<!-- Grid de juegos -->  
-<div class="grid" id="gameGrid">  
+<!-- Grid de juegos (oculto hasta login) -->  
+<div class="grid" id="gameGrid" style="display:none;">  
+  <!-- todos los juegos aquí -->  
   <div class="game">  
     <a href="Slope-Source-code-main/index.html">  
       <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />  
@@ -180,12 +241,12 @@
       <div class="game-title">Drive Mad</div>  
     </a>  
   </div>  
- <div class="game">  
+  <div class="game">  
     <a href="WorldHardest/index.html">  
       <img src="WorldHardest/world.png" alt="World Hardest Game" />  
       <div class="game-title">World Hardest Game</div>  
     </a>  
-   </div> 
+  </div>  
   <div class="game">  
     <a href="bitlife/index.html">  
       <img src="bitlife/logo.png" alt="Bitlife" />  
@@ -215,12 +276,12 @@
       <img src="skibidi1v100/logo.png" alt="Skibidi 1v100" />  
       <div class="game-title">Skibidi 1v100</div>  
     </a>  
-    </div>  
+  </div>  
   <div class="game">  
     <a href="DogeMiner/index.html">  
       <img src="DogeMiner/favicon.ico" alt="Doge Miner Tycoon" />  
       <div class="game-title">Doge Miner Tycoon</div>  
-    </a> 
+    </a>  
   </div>  
   <div class="game">  
     <a href="snowrider3d/index.html">  
@@ -237,32 +298,55 @@
 </div>  
 
 <script>  
+  const loginPanel = document.getElementById("loginPanel");  
+  const loginBtn = document.getElementById("loginBtn");  
+  const usernameInput = document.getElementById("username");  
+  const passwordInput = document.getElementById("password");  
+  const loginError = document.getElementById("loginError");  
   const toggleBtn = document.getElementById("toggleButton");  
   const creditsSection = document.getElementById("creditsSection");  
   const gameGrid = document.getElementById("gameGrid");  
 
+  // Datos de usuario y contraseña predeterminados  
+  const validUser = "admin";  
+  const validPass = "1234";  
+
+  loginBtn.onclick = () => {  
+    const usuario = usernameInput.value.trim();  
+    const contrasena = passwordInput.value.trim();  
+
+    if (usuario === validUser && contrasena === validPass) {  
+      // Inicio de sesión correcto  
+      loginPanel.style.display = "none";  
+      document.getElementById("toggleButton").style.display = "block";  
+      document.getElementById("creditsSection").style.display = "block";  
+      document.getElementById("gameGrid").style.display = "grid";  
+    } else {  
+      loginError.style.display = "block";  
+    }  
+  }  
+
+  // Opcional: presionar Enter en los inputs también inicia sesión  
+  [usernameInput, passwordInput].forEach(input => {  
+    input.addEventListener("keydown", (e) => {  
+      if (e.key === "Enter") {  
+        loginBtn.click();  
+      }  
+    });  
+  });  
+
+  // Funcionalidad para mostrar/ocultar créditos/juegos  
   toggleBtn.onclick = () => {  
     if (creditsSection.style.display === "none") {  
-      // Mostrar créditos, ocultar juegos  
       creditsSection.style.display = "block";  
       gameGrid.style.display = "none";  
       toggleBtn.innerHTML = "Volver a los Juegos";  
     } else {  
-      // Mostrar juegos, ocultar créditos  
       creditsSection.style.display = "none";  
       gameGrid.style.display = "grid";  
       toggleBtn.innerHTML = "Ver Actualizaciones y Créditos";  
     }  
   };  
-
-  function searchGames() {  
-    const input = document.getElementById("searchInput").value.toLowerCase();  
-    const games = document.querySelectorAll(".game");  
-    games.forEach(game => {  
-      const title = game.querySelector(".game-title").textContent.toLowerCase();  
-      game.style.display = title.includes(input) ? "block" : "none";  
-    });  
-  }  
 </script>  
 </body>  
 </html>
