--- a/index.html
+++ b/index.html
@@ -308,8 +308,18 @@
   const gameGrid = document.getElementById("gameGrid");  
 
   // Datos de usuario y contraseña predeterminados  
-  const validUser = "admin";  
-  const validPass = "1234";  
+  const validUser = "aitor";  
+  const validPass = "ynosfuimos123";  
+ const validUser = "alfon";  
+  const validPass = "donpollo123",
+   const validUser = "jorge";  
+  const validPass = "1234"; 
+ const validUser = "roberto";  
+  const validPass = "1234"; 
+ const validUser = "carmelo";  
+  const validPass = "1234";
+ const validUser = "pablo";  
+  const validPass = "1234";
 
   loginBtn.onclick = () => {  
     const usuario = usernameInput.value.trim();  
