--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
     <a href="csgo/index.html">  
       <img src="csgo/download.jpg" alt="CS:GO" />  
       <div class="game-title">CS:GO</div>  
+    </a> 
+   </div>  
+  <div class="game">  
+    <a href="8BallPool/index.html">  
+      <img src="8BallPool/unnamed.png" alt="8 Ball Pool" />  
+      <div class="game-title">8 Ball Pool</div>  
     </a>  
   </div>  
   <div class="game">  
